--- a/src/views/index.html
+++ b/src/views/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href=”favicon.ico” type=”image/x-icon”>
 </head>
 
 <body>
+    <img src="favicon.ico" alt="Картинка" />
     <p1>Hello World</p1>
 </body>
 
