--- a/src/views/index.html
+++ b/src/views/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <img src="favicon.ico" alt="Картинка" />
+    <img src="img.png" alt="Картинка" />
     <p1>Hello World</p1>
 </body>
 
